// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`timeline/LocalTrack with a memory track matches the snapshot of the memory track 1`] = `
<li
  class="timelineTrack timelineTrackLocal"
>
  <div
    class="timelineTrackRow timelineTrackLocalRow"
  >
    <div
      class="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
      title="My Description"
    >
      <button
        class="timelineTrackNameButton"
        type="button"
      >
        Memory
      </button>
    </div>
    <div
      class="timelineTrackTrack"
    >
      <div
        class="timelineTrackMemory"
        style="height: 40px; --graph-height: 25px; --markers-height: 15px;"
      >
        <div
          class="timelineMarkers timelineMarkersMemory"
          data-testid="TimelineMarkersMemory"
        >
          <div
            class="react-contextmenu-wrapper"
          >
            <canvas
              class="timelineMarkersCanvas"
            />
          </div>
        </div>
        <div
          class="timelineTrackMemoryGraph"
        >
          <canvas
            class="timelineTrackMemoryCanvas"
          />
          <div
            class="timelineEmptyThreadIndicator"
          />
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`timeline/LocalTrack with a network track matches the snapshot of the network track 1`] = `
<li
  class="timelineTrack timelineTrackLocal"
>
  <div
    class="timelineTrackRow timelineTrackLocalRow"
  >
    <div
      class="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
    >
      <button
        class="timelineTrackNameButton"
        type="button"
      >
        Network
      </button>
    </div>
    <div
      class="timelineTrackTrack"
    >
      <div
        class="timelineTrackNetwork"
        style="height: 35px;"
      >
        <canvas
          class="timelineTrackNetworkCanvas"
        />
        <div
          class="timelineVerticalIndicators"
          data-testid="vertical-indicators"
        >
          <div
            class="timelineVerticalIndicatorsLine"
            data-testid="vertical-indicator-line"
            style="--vertical-indicator-color: var(--red-60); left: 0px;"
          />
          <div
            class="timelineVerticalIndicatorsLine"
            data-testid="vertical-indicator-line"
            style="--vertical-indicator-color: #000; left: 0px;"
          />
          <div
            class="timelineVerticalIndicatorsLine"
            data-testid="vertical-indicator-line"
            style="--vertical-indicator-color: var(--blue-50); left: 0px;"
          />
          <div
            class="timelineVerticalIndicatorsLine"
            data-testid="vertical-indicator-line"
            style="--vertical-indicator-color: var(--grey-40); left: 0px;"
          />
          <div
            class="timelineVerticalIndicatorsLine"
            data-testid="vertical-indicator-line"
            style="--vertical-indicator-color: var(--green-60); left: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`timeline/LocalTrack with a thread track matches the snapshot of a local track 1`] = `
<li
  class="timelineTrack timelineTrackLocal"
>
  <div
    class="timelineTrackRow timelineTrackLocalRow"
  >
    <div
      class="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
      title="thread: \\"DOM Worker\\" (0)
process: \\"tab\\" (222)"
    >
      <button
        class="timelineTrackNameButton"
        type="button"
      >
        DOM Worker
      </button>
    </div>
    <div
      class="timelineTrackTrack"
    >
      <div
        class="timelineTrackThread"
      >
        <div
          class="timelineMarkers"
          data-testid="TimelineMarkersJank"
        >
          <div
            class="react-contextmenu-wrapper"
          >
            <canvas
              class="timelineMarkersCanvas"
            />
          </div>
        </div>
        <div
          class="threadActivityGraph"
        >
          <canvas
            class="threadActivityGraphCanvas threadActivityGraphCanvas"
            height="400"
            width="400"
          />
        </div>
        <div
          class="timelineEmptyThreadIndicator"
        />
      </div>
    </div>
  </div>
</li>
`;

exports[`timeline/LocalTrack with an IPC track matches the snapshot of the IPC track 1`] = `
<li
  class="timelineTrack timelineTrackLocal"
>
  <div
    class="timelineTrackRow timelineTrackLocalRow"
  >
    <div
      class="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
    >
      <button
        class="timelineTrackNameButton"
        type="button"
      >
        IPC — Empty
      </button>
    </div>
    <div
      class="timelineTrackTrack"
    >
      <div
        style="height: 25px; --markers-height: 25px;"
      >
        <div
          class="timelineMarkers timelineMarkersIPC"
          data-testid="TimelineMarkersIPC"
        >
          <div
            class="react-contextmenu-wrapper"
          >
            <canvas
              class="timelineMarkersCanvas"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</li>
`;
